--- a/templates/results.html
+++ b/templates/results.html
@@ -4,7 +4,7 @@
 
 <h2>{{ the_title }}</h2>
 
-<p>랜덤으로 뽑힌 숫자입니다!</p>
+<p>입력하신 {{the_won}}개의 임의의 숫자입니다!</p>
 
 <p>로또 번호 생성된 값은</p>
 
@@ -12,5 +12,7 @@
 <br><br>
 <h3>로또 사러 가시죠!! </h3>
 <br><a href="https://dhlottery.co.kr/" target="_blank" type="새창으로 열기" >동행복권 바로가기 >></a>
-
+<br>
+<br>
+<br>이 페이지는 예측프로그램이 아닌, 단순한 임의의 숫자 값이므로<br> 출력된 값에 대해 어떠한 책임도 지지 않습니다<br>
 {% endblock %}
